kubernetes/develop/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-safeguard
  namespace: ai-safeguard
spec:
  selector:
    matchLabels:
      app: ai-safeguard
  template:
    metadata:
      labels:
        app: ai-safeguard
    spec:
      containers:
        - image: ai-safeguard
          name: ai-safeguard
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 900Mi
              cpu: 200m
            limits:
              memory: 2Gi
              cpu: 1500m
