kubernetes/develop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-safeguard
  namespace: ai-safeguard
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8000
  selector:
    app: ai-safeguard
