kubernetes/develop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-safeguard
  namespace: ai-safeguard
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/proxy-body-size: 25m
spec:
  ingressClassName: nginx
  rules:
    - host: ai-safeguard.dev.theblockbrain.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-safeguard
                port:
                  number: 80
